@@ -62,7 +62,10 @@
 - removed old camera scripts and moved their content to cameraobject and cameracomponent scripts
 - engine always creates a scene camera and switches to it by default when scene is opened
 - can toggle between scene camera and user-created cameras
-- can set player camera in settings window game tab
+- can set player camera in settings window game tab, without this the game will not have an active camera
 - qqq console command bypasses save check
 - fixed game not printing engine messages to game console
 - enable debug console messages by default in engine or game debug version
+- improved gameobject save file formatting
+- saving scene camera data to scene file only in engine
+- delete old gameobject save file if object was renamed in inspector, mark scene as unsaved
